--- a/wwwroot/css/nav.css
+++ b/wwwroot/css/nav.css
@@ -186,9 +186,24 @@ div > form > input {
 }
 
 .footer-settings {
-  
+  height: 200px;
 }
 
 .footer-settings h4 {
   color: rgb(197, 197, 197);
+}
+
+#wrapper {
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  /* Negative indent footer by its height */
+  margin: 0 auto -200px;
+  /* Pad the bottom by footer height */
+  padding: 0 0 230px;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
 }
